--- a/faq.html
+++ b/faq.html
@@ -135,7 +135,7 @@
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
           <div class="pl-4 flex items-center">
-            <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="./index.html">
+            <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
               <!-- Replace with your own logo -->
               <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
   
@@ -152,19 +152,19 @@
           <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
             <ul class="list-reset lg:flex justify-end flex-1 items-center">
               <li class="mr-3">
-                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="index.html">Home</a>
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com">Home</a>
               </li>
               <li class="mr-3">
-                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="about.html">About Us</a>
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/about">About Us</a>
               </li>
               <li class="mr-3">
-                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="contact.html">Contact</a>
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/contact">Contact</a>
               </li>
               <li class="mr-3">
-                <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="faq.html">FAQ</a>
+                <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="https://persicastudio.com/faq">FAQ</a>
               </li>
             </ul>
-            <a href="modelregistration.html">
+            <a href="https://persicastudio.com/modelregistration">
               <button
                 id="navAction"
                 class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
@@ -369,7 +369,7 @@
         <div class="bg-gray-100 rounded-lg p-8 text-center shadow-lg">
           <h2 class="text-2xl font-bold mb-4">Still Have Questions?</h2>
           <p class="text-gray-600 mb-6">Didn't find what you were looking for? Contact us directly and we'll help you out.</p>
-          <a href="contact.html" class="gradient text-white font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300 inline-block">
+          <a href="https://persicastudio.com/contact" class="gradient text-white font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300 inline-block">
             Contact Us
           </a>
         </div>
@@ -382,7 +382,7 @@
       <div class="container mx-auto px-4 text-center">
         <h2 class="text-3xl font-bold text-white mb-4">Ready to Start Your New Career?</h2>
         <p class="text-xl text-white mb-8">Join our professional and supportive environment today.</p>
-        <a href="modelregistration.html" class="bg-white text-gray-800 font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300">
+        <a href="https://persicastudio.com/modelregistration" class="bg-white text-gray-800 font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300">
           Apply Now
         </a>
       </div>
@@ -393,7 +393,7 @@
         <div class="container mx-auto px-8">
           <div class="w-full flex flex-col md:flex-row py-6">
             <div class="flex-1 mb-6 text-black">
-              <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="./index.html">
+              <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
                 <img src="./assets/K_PersicaStudio_HQ-03.png" alt="Persica Studio" class="h-40 inline" />
               </a>
             </div>
@@ -401,7 +401,7 @@
               <p class="uppercase text-gray-500 md:mb-6">Links</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="./faq.html" class="no-underline hover:underline text-gray-800 hover:text-pink-500">FAQ</a>
+                  <a href="https://persicastudio.com/faq" class="no-underline hover:underline text-gray-800 hover:text-pink-500">FAQ</a>
                 </li>
               </ul>
             </div>
@@ -437,10 +437,10 @@
                   <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="./about.html" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
+                  <a href="https://persicastudio.com/about" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="./contact.html" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Contact</a>
+                  <a href="https://persicastudio.com/contact" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Contact</a>
                 </li>
               </ul>
             </div>
