--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                 <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/faq">FAQ</a>
               </li>
             </ul>
-            <a href="modelregistration.html">
+            <a href="https://persicastudio.com/modelregistration">
               <button
                 id="navAction"
                 class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
@@ -362,7 +362,7 @@
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-3xl font-bold text-white mb-4">Ready to Start Your New Career?</h2>
       <p class="text-xl text-white mb-8">Join our professional and supportive environment today.</p>
-      <a href="modelregistration.html" class="pulse-button bg-white text-gray-800 font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300">
+      <a href="https://persicastudio.com/modelregistration" class="pulse-button bg-white text-gray-800 font-bold rounded-full py-4 px-8 shadow-lg hover:shadow-xl transition duration-300">
         Apply Now
       </a>
     </div>
