Update contact.html Contact Changes

--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                 </div>
                 <div>
                   <p class="font-bold mb-1">Email</p>
-                  <p class="text-gray-600">info@persicastudio.com</p>
+                  <p class="text-gray-600">contact@persicastudio.com</p>
                 </div>
               </div>
               
