--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
           <div class="pl-4 flex items-center">
             <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
-              <!-- Replace with your own logo -->
+              <!-- Logo Header -->
               <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
   
             </a>
@@ -219,13 +219,12 @@
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12">Our Location</h2>
         
-        <!-- Replace this with your actual map embed code -->
+        <!-- Map Code -->
         <div class="w-full h-96 bg-gray-300 rounded-lg shadow-lg overflow-hidden">
-          <!-- Placeholder for map, replace with actual embed code -->
           <div class="w-full h-full flex items-center justify-center">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1423.1105984678813!2d26.127623428446622!3d44.49013422631031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1f87865ef050f%3A0x2c61af16fbdd3435!2sPipera%20Plaza!5e0!3m2!1sen!2sus!4v1745686850163!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            <!-- To add a real map, use something like:
-            <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2848.065890806904!2d26.130594799999997!3d44.4523201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1f9726e1d813d%3A0xc2620954fa847fec!2sPersica%20Studio!5e0!3m2!1sen!2sus!4v1745719295362!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <!-- 
+            <width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             -->
           </div>
         </div>
