--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,6 @@
         margin-bottom: 1rem;
       }
     </style>
-    <!-- Add this to your <head> section -->
 <style>
     /* Smooth animations for FAQ items */
     details .pl-2 {
@@ -136,7 +135,7 @@
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
           <div class="pl-4 flex items-center">
             <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
-              <!-- Replace with your own logo -->
+              <!-- Logo Header -->
               <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
   
             </a>
@@ -518,7 +517,7 @@
         return false;
       }
     </script>
-    <!-- New animation script -->
+    <!-- N animation script -->
 <script>
     // Intersection Observer for scroll animations
     document.addEventListener('DOMContentLoaded', function() {
