--- a/modelregistration.html
+++ b/modelregistration.html
@@ -24,7 +24,7 @@
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
           <div class="pl-4 flex items-center">
             <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
-              <!-- Replace with your own logo -->
+              <!-- Logo Header -->
               <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
   
             </a>
@@ -196,7 +196,6 @@
       </div>
     </section>
 
-<!-- Keep everything the same but modify the Admission Steps section -->
 
 <!-- Admission Steps Section -->
 <section class="bg-gray-100 py-16">
@@ -268,7 +267,7 @@
     </div>
   </section>
   
-  <!-- Add Lottie player library before your closing body tag -->
+  <!--  Lottie player library  -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- Call to action -->
