--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
           <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
-            <!-- Replace with your own logo -->
+            <!-- Header Logo -->
             <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
 
           </a>
