--- a/modelregistration.html
+++ b/modelregistration.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="webcam studio, registration, model application, careers" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <style>
       .gradient {
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
