--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <style>
       .gradient {
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
