--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="webcam studio, contact, support, careers" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <!-- Font Awesome for WhatsApp icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
