--- a/contact.html
+++ b/contact.html
@@ -264,10 +264,10 @@
               <p class="uppercase text-gray-500 md:mb-6">Legal</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
+                  <a href="https://persicastudio.com/terms" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy</a>
+                  <a href="https://persicastudio.com/privacy" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy Policy</a>
                 </li>
               </ul>
             </div>
@@ -275,13 +275,13 @@
               <p class="uppercase text-gray-500 md:mb-6">Social</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
+                  <a href="https://www.facebook.com/people/Persica-Studio/61575403124610" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Linkedin</a>
+                  <a href="https://www.tiktok.com/@persica_studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">TikTok</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Twitter</a>
+                  <a href="https://x.com/Persica_Studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">X</a>
                 </li>
               </ul>
             </div>
@@ -289,7 +289,7 @@
               <p class="uppercase text-gray-500 md:mb-6">Company</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
+                  <a href="https://persicastudio.com/blog" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                   <a href="https://persicastudio.com/about" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
