--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="animations.css"/>
     <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <style>
       .gradient {
@@ -156,6 +157,9 @@
               </li>
               <li class="mr-3">
                 <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/about">About Us</a>
+              </li>
+              <li class="mr-3">
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/blog">Blog</a>
               </li>
               <li class="mr-3">
                 <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/contact">Contact</a>
@@ -409,10 +413,10 @@
               <p class="uppercase text-gray-500 md:mb-6">Legal</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
+                  <a href="https://persicastudio.com/terms" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy</a>
+                  <a href="https://persicastudio.com/privacy" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy Policy</a>
                 </li>
               </ul>
             </div>
@@ -420,13 +424,13 @@
               <p class="uppercase text-gray-500 md:mb-6">Social</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
+                  <a href="https://www.facebook.com/people/Persica-Studio/61575403124610" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Linkedin</a>
+                  <a href="https://www.tiktok.com/@persica_studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">TikTok</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Twitter</a>
+                  <a href="https://x.com/Persica_Studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">X</a>
                 </li>
               </ul>
             </div>
@@ -434,7 +438,7 @@
               <p class="uppercase text-gray-500 md:mb-6">Company</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
+                  <a href="https://persicastudio.com/blog" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                   <a href="https://persicastudio.com/about" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
@@ -584,6 +588,7 @@
         });
       });
     });
-    </script>    
+    </script>
+    <script src="animations.js"></script>
   </body>
 </html>
