--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="webcam studio, contact, support, careers" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <link rel="stylesheet" href="animations.css"/>
     <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <!-- Font Awesome for WhatsApp icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -56,6 +57,9 @@
               </li>
               <li class="mr-3">
                 <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/about">About Us</a>
+              </li>
+              <li class="mr-3">
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/blog">Blog</a>
               </li>
               <li class="mr-3">
                 <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="https://persicastudio.com/contact">Contact</a>
@@ -373,5 +377,6 @@
         return false;
       }
     </script>
+    <script src="animations.js"></script>
   </body>
 </html>
