--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <link rel="stylesheet" href="animations.css"/>
     <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
@@ -66,6 +67,9 @@
               </li>
               <li class="mr-3">
                 <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="https://persicastudio.com/about">About Us</a>
+              </li>
+              <li class="mr-3">
+                <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/blog">Blog</a>
               </li>
               <li class="mr-3">
                 <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://persicastudio.com/contact">Contact</a>
@@ -367,7 +371,7 @@
       </a>
     </div>
   </section>
-    <!--Footer-->
+     <!--Footer-->
     <footer class="bg-white">
         <div class="container mx-auto px-8">
           <div class="w-full flex flex-col md:flex-row py-6">
@@ -388,10 +392,10 @@
               <p class="uppercase text-gray-500 md:mb-6">Legal</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
+                  <a href="https://persicastudio.com/terms" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy</a>
+                  <a href="https://persicastudio.com/privacy" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy Policy</a>
                 </li>
               </ul>
             </div>
@@ -399,13 +403,13 @@
               <p class="uppercase text-gray-500 md:mb-6">Social</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
+                  <a href="https://www.facebook.com/people/Persica-Studio/61575403124610" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Linkedin</a>
+                  <a href="https://www.tiktok.com/@persica_studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">TikTok</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Twitter</a>
+                  <a href="https://x.com/Persica_Studio" class="no-underline hover:underline text-gray-800 hover:text-pink-500">X</a>
                 </li>
               </ul>
             </div>
@@ -413,7 +417,7 @@
               <p class="uppercase text-gray-500 md:mb-6">Company</p>
               <ul class="list-reset mb-6">
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                  <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
+                  <a href="https://persicastudio.com/blog" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Blog</a>
                 </li>
                 <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                   <a href="https://persicastudio.com/about" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
@@ -504,5 +508,6 @@
             var parallaxInstance = new Parallax(scene);
             });
         </script>
+    <script src="animations.js"></script>
     </body>
   </html>
