--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Blog - Professional webcam studio insights and news" />
     <meta name="keywords" content="webcam studio, blog, industry insights, tips, news" />
+    <!-- Additional SEO Metadata -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Persica Studio" />
+    <meta property="og:title" content="Persica Studio - Professional Webcam Studio in Romania" />
+    <meta property="og:description" content="Join a professional and supportive environment where you can grow, thrive, and reach your full potential — on and off camera." />
+    <meta property="og:image" content="https://persicastudio.com/assets/K_PersicaStudio_HQ-03.png" />
+    <meta property="og:url" content="https://persicastudio.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Persica Studio - Professional Webcam Studio in Romania" />
+    <meta name="twitter:description" content="Join a professional and supportive environment where you can grow, thrive, and reach your full potential — on and off camera." />
+    <meta name="twitter:image" content="https://persicastudio.com/assets/K_PersicaStudio_HQ-03.png" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
