Update about.html SEO

--- a/about.html
+++ b/about.html
@@ -6,6 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="About us - Professional webcam studio" />
     <meta name="keywords" content="webcam studio, about us, studio history, team, values" />
+    <title>About Us - Persica Studio | Professional Webcam Studio</title>
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Persica Studio" />
+    <link rel="canonical" href="https://www.persicastudio.com/about.html" />
+    <meta property="og:title" content="About Us - Persica Studio | Professional Webcam Studio" />
+    <meta property="og:description" content="Learn about Persica Studio, our history, values, and the professional team behind our success. Join our supportive environment today!" />
+    <meta property="og:image" content="https://www.persicastudio.com/assets/og-image-about.jpg" />
+    <meta property="og:url" content="https://www.persicastudio.com/about.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About Us - Persica Studio | Professional Webcam Studio" />
+    <meta name="twitter:description" content="Learn about Persica Studio, our history, values, and the professional team behind our success. Join our supportive environment today!" />
+    <meta name="twitter:image" content="https://www.persicastudio.com/assets/og-image-about.jpg" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
