Update contact.html SEO

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Contact us - Professional webcam studio" />
     <meta name="keywords" content="webcam studio, contact, support, careers" />
+    <title>Contact Us - Persica Studio | Professional Webcam Studio</title>
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Persica Studio" />
+    <meta property="og:title" content="Contact Us - Persica Studio | Professional Webcam Studio" />
+    <meta property="og:description" content="Get in touch with Persica Studio for inquiries, support, or career opportunities. We're here to help!" />
+    <meta property="og:image" content="https://www.persicastudio.com/assets/og-image.jpg" />
+    <meta property="og:url" content="https://www.persicastudio.com/contact.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contact Us - Persica Studio | Professional Webcam Studio" />
+    <meta name="twitter:description" content="Get in touch with Persica Studio for inquiries, support, or career opportunities. We're here to help!" />
+    <meta name="twitter:image" content="https://www.persicastudio.com/assets/og-image.jpg" />
+    <link rel="canonical" href="https://www.persicastudio.com/contact.html" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
-    <link rel="stylesheet" href="animations.css"/>
-    <link rel="icon" href="/assets/favi.png" type="image/x-icon">
     <!-- Font Awesome for WhatsApp icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
