Update faq.html SEO

--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="FAQ - Professional webcam studio" />
     <meta name="keywords" content="webcam studio, FAQ, frequently asked questions, model requirements" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Persica Studio" />
+    <meta property="og:title" content="FAQ - Professional Webcam Studio" />
+    <meta property="og:description" content="Find answers to frequently asked questions about Persica Studio, including application requirements, work details, earnings, and privacy concerns." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.persicastudio.com/faq.html" />
+    <meta property="og:image" content="https://www.persicastudio.com/assets/K_PersicaStudio_HQ-03White.jpg" />
+    <meta property="og:locale" content="en_US" />
+    <link rel="canonical" href="https://www.persicastudio.com/faq.html" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
