--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Persica Studio | Professional Webcam Studio</title>
     <meta name="description" content="Professional webcam studio in Romania offering career opportunities" />
     <meta name="keywords" content="webcam studio, Romania, webcam model, careers" />
+    <!-- Additional SEO Metadata -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Persica Studio" />
+    <meta property="og:title" content="Persica Studio - Professional Webcam Studio in Romania" />
+    <meta property="og:description" content="Join a professional and supportive environment where you can grow, thrive, and reach your full potential — on and off camera." />
+    <meta property="og:image" content="https://persicastudio.com/assets/K_PersicaStudio_HQ-03.png" />
+    <meta property="og:url" content="https://persicastudio.com" />
+    <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://persicastudio.com" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="animations.css"/>
