--- a/index.html
+++ b/index.html
@@ -40,20 +40,40 @@
       }
     </style>
     
+    <!-- Schema.org markup for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Persica Studio",
+      "url": "https://persicastudio.com",
+      "logo": "https://persicastudio.com/assets/K_PersicaStudio_HQ-03.png",
+      "description": "Professional webcam studio in Romania offering career opportunities with high earnings, privacy, and flexible hours.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "Romania"
+      },
+      "sameAs": [
+        "https://www.facebook.com/people/Persica-Studio/61575403124610",
+        "https://www.tiktok.com/@persica_studio",
+        "https://x.com/Persica_Studio"
+      ]
+    }
+    </script>
+    
   </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com">
+          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="https://persicastudio.com" aria-label="Persica Studio Home">
             <!-- Header Logo -->
-            <img src="./assets/headerlogot.png" alt="Persica Studio" class="h-20 inline" />
-
+            <img src="./assets/headerlogot.png" alt="Persica Studio Logo - Professional Webcam Studio in Romania" class="h-20 inline" width="240" height="80" />
           </a>
         </div>
         <div class="block lg:hidden pr-4">
-          <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+          <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" aria-label="Navigation Menu">
             <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -97,20 +117,20 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full">Romania's Premier Webcam Studio</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Empowering Ambition, Confidence, and Success
+            Professional Webcam Studio in Romania: Empowering Careers with High Earnings
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            Join a professional and supportive environment where you can grow, thrive, and reach your full potential — on and off camera.
+            Join Persica Studio, Romania's leading webcam studio offering a professional and supportive environment where you can grow, thrive, and reach your full potential — on and off camera.
           </p>
           <a href="https://persicastudio.com/modelregistration">
             <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-              Start Your Journey
+              Start Your Career Today
             </button>
           </a>
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/6 py-5 text-center">
-          <img class="w-full md:w-4/5 z-50" src="./assets/K_PersicaStudio_HQ-03.png" alt="Persica Studio hero image" />
+          <img class="w-full md:w-4/5 z-50" src="./assets/K_PersicaStudio_HQ-03.png" alt="Persica Studio - Professional webcam studio in Romania with luxury facilities" width="600" height="400" loading="eager" />
         </div>
       </div>
     </div>
@@ -133,10 +153,10 @@
         </g>
       </svg>
     </div>
-    <section class="bg-white border-b py-8">
+    <section class="bg-white border-b py-8" id="studio-facilities">
       <div class="container max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Where Professionalism Meets Opportunity
+          Where Professionalism Meets Opportunity in Romania
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -144,37 +164,37 @@
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              A Modern Studio for Modern Talent
+              A Modern Webcam Studio for Modern Talent
             </h3>
             <p class="text-gray-600 mb-8">
-              Our fully equipped studios offer comfort, privacy, and cutting-edge technology to ensure you feel safe and confident at work.
+              Located in Romania, our fully equipped studios offer comfort, privacy, and cutting-edge technology to ensure you feel safe and confident at work. Each room is designed with your success in mind, featuring professional lighting, high-speed internet, and premium equipment to help you maximize your earnings.
             </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <img src="./assets/studiobedroom.jpg" alt="Professional webcam studio meeting room interior" class="w-full">
+            <img src="./assets/studiobedroom.jpg" alt="Persica Studio - Luxury webcam model room with professional equipment in Romania" class="w-full" width="600" height="400" loading="lazy" />
           </div>
         </div>
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
-            <img src="./assets/exterior.jpg" alt="Private webcam performer studio with professional lighting setup" class="w-full">
+            <img src="./assets/exterior.jpg" alt="Persica Studio exterior - Professional webcam studio building in Romania" class="w-full" width="600" height="400" loading="lazy" />
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Support Every Step of the Way
+                Support Every Step of the Way at Our Romanian Studio
               </h3>
               <p class="text-gray-600 mb-8">
-                From training to promotion, our team is here to help you succeed — whether you're on camera or behind the scenes.
+                At Persica Studio in Romania, we provide comprehensive training and ongoing support to help you succeed. Our experienced team offers guidance on performance techniques, account management, and marketing strategies to maximize your income. We're committed to your success with a supportive community that helps you thrive in the webcam industry.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-white border-b py-8">
+    <section class="bg-white border-b py-8" id="career-opportunities">
       <div class="container mx-auto flex flex-wrap pt-4 pb-12">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Your Role, Your Future
+          Your Role, Your Future at Persica Studio Romania
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -183,10 +203,10 @@
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="https://persicastudio.com/adminregistration" class="flex flex-wrap no-underline hover:no-underline">
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Studio Administrator
+                Studio Administrator in Romania
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Organize, manage, and ensure smooth operations across the studio. Be the key behind our daily success.
+                Organize, manage, and ensure smooth operations across our professional webcam studio in Romania. Be the key behind our daily success with competitive salary and growth opportunities.
               </p>
             </a>
           </div>
@@ -204,10 +224,10 @@
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="https://persicastudio.com/modelregistration" class="flex flex-wrap no-underline hover:no-underline">
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Become a Webcam Model
+                Become a Webcam Model in Romania
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                High earnings, full privacy, flexible hours. Work in a respectful and luxurious environment tailored to your success.
+                High earnings, full privacy, flexible hours at Romania's premier webcam studio. Work in a respectful and luxurious environment tailored to your success with earnings potential starting at €5,000 monthly.
               </p>
             </a>
           </div>
@@ -225,10 +245,10 @@
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="https://persicastudio.com/monitorregistration" class="flex flex-wrap no-underline hover:no-underline">
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Monitor
+                Studio Monitor in Romania
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Maintain quality, compliance, and safety. An ideal role for those who love structure and detail.
+                Maintain quality, compliance, and safety at our Romanian webcam studio. An ideal role for those who love structure and detail with competitive compensation and a professional work environment.
               </p>
             </a>
           </div>
@@ -266,22 +286,22 @@
         </g>
       </g>
     </svg>
-    <section class="container mx-auto text-center py-6 mb-12">
+    <section class="container mx-auto text-center py-6 mb-12" id="cta">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-        Ready to Build a Career You're Proud Of?
+        Ready to Build a Career at Romania's Leading Webcam Studio?
       </h2>
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
       <h3 class="my-4 text-3xl leading-tight">
-        Whether you're in front of the camera or behind it, we offer a professional path to financial independence and personal growth.
+        Whether you're in front of the camera or behind it, Persica Studio in Romania offers a professional path to financial independence and personal growth with top-tier facilities and support.
       </h3>
       <a href="https://persicastudio.com/modelregistration">
         <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
           Apply Now
         </button>
       </a>
-    </section>
+    </section>    
     <!--Footer-->
     <footer class="bg-white">
         <div class="container mx-auto px-8">
